Fix checkstyle violations for quality profile (785 -> 0)
- Add @DisplayName annotations to test classes and methods
- Add class-level Javadoc with rationale cues (because, so that, in order to)
- Add meaningful assertion messages describing subject and expected outcome
- Convert inline /* */ comments on throws to DecoratedBuffer*Exception
- Add @SuppressWarnings for domain terminology (bytes, buffer, mapped)
- Fix duplicate messages by adding method context
- Move trailing comments to line before throw/return statements

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>